<resources>
    <string name="app_name">My Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_save_note">¿Estas seguro de guardar los cambios?</string>
    <string name="question_delete_note">¿Estas seguro de eliminar la nota?</string>
    <string name="title_new_note">Nueva nota</string>
    <string name="title_edit_note">Editar nota</string>
    <string name="search_note">Buscar nota</string>
    <string name="search_view">Buscar nota</string>
    <string name="requeride">Requerido</string>
    <string name="msg_not_supported_type">Tipo no soportado</string>
    <string name="msg_note_deleted">Se ha eliminado la nota</string>
    <string name="title_detail">Detalle</string>
    <string name="pin">Anclar</string>
    <string name="pint">Desanclar</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Editar</string>
    <string name="description_image">Description Image</string>
    <string name="notice">Novedades</string>
    <string name="setting">Ajustes</string>
    
    <!--TEXT EXAMPLE-->
    <string name="lorem_text">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</string>
    <string name="example_day">17</string>
    <string name="example_mes">Mayo</string>
    <string name="example_date">Hace 3 dias</string>
    <string name="add_note">Add Note</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="password_repeat">Repetir contraseña</string>
    <string name="sign_in">Inicio de sesión</string>
    <string name="sign_up">Registrarse</string>
    <string name="save">Guardar</string>
    <string name="example_result">list mark</string>
    <string name="example_title_notice">Mañana tienes reunion a las 4</string>
    <string name="example_description_notice">El dia 16 de Septiembre hay una reunion a las 6:00 PM.</string>


    <string name="time_ago"> Hace </string>
    <string name="time_secouds"> s </string>
    <string name="time_minute"> m </string>
    <string name="time_hour"> Hora </string>
    <string name="time_yesterday">Ayer</string>
    <string name="description_notification">Personaliza las notificaciones que recibiras</string>
    <string name="notifications">Notificaciones</string>
    <string name="account">Cuenta</string>
    <string name="text_example_name_audio">Audio871295</string>
    <string name="text_title">Titulo</string>
    <string name="note">Nota</string>
    <string name="audio">Audio</string>
    <string name="reminder">Recordatorio</string>
    <string name="time_ago_moment">Hace un momento</string>
    <!--    TEXT DIALOG    -->
    <string name="title_cancel_record">Se cancelara la grabacion</string>}
    <string name="message_cancel_record">¿Esta seguro de cancelar grabacion?</string>

    <string name="title_picker_time">Select time</string>
</resources>