<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/title_detail"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/div_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/div_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            tools:text="@string/lorem_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/div_1" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/tv_content"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TextView
                android:id="@+id/date_create"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_day" />

            <TextView
                android:id="@+id/txt_mes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_mes" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_content"
            app:layout_constraintStart_toEndOf="@+id/linearLayout2"
            >

            <TextView
                android:id="@+id/date_update"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_day" />

            <TextView
                android:id="@+id/txt_mes_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_mes" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/div_button"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_pind"
            android:text="@string/pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="16dp"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            app:icon="@drawable/ic_pin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/div_button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_delete"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="16dp"
            app:icon="@drawable/ic_delete"
            app:layout_constraintTop_toBottomOf="@+id/div_button"
            app:layout_constraintStart_toEndOf="@+id/button_pind"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_edit"
            android:text="@string/title_edit_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="16dp"
            app:icon="@drawable/ic_mode_edit"
            app:layout_constraintTop_toBottomOf="@+id/div_button"
            app:layout_constraintStart_toEndOf="@+id/button_delete"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>